# mlops-data-processor

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
Datensatz/: adult-income-processed.csv
Notebook/: 00_Environment_setup.ipynb  01_Data_Exploration_und_Validation.ipynb  01_Daten_Exploration_und_Validierung-en.ipynb  02_Data_preprocessing.ipynb  02_Daten_Vorverarbeitung-en.ipynb
app/: constants.py  dvc.py  utils.py
app/core/: dvc_client.py
app/core/celery/: app.py  celeryconfig.py
app/core/clients/: dvc_client.py
app/tasks/: base_task.py
app/tasks/data_processing/: tasks.py
app/tasks/data_transformation/: tasks.py
app/tasks/feature_engineering/: tasks.py
app/tasks/modeling/: tasks.py
app/tasks/workflows/: tasks.py
docker/: Dockerfile  docker-compose.yml
notebooks/: 00_Umgebung einrichten-en.ipynb  01_Daten_Exploration_und_Validierung-en.ipynb  02_Daten_Vorverarbeitung-en.ipynb
src/: data_preprocessing.py  evaluate.py  hyperparameter_optimization.py  inference.py  main.py  model_selection.py  save_preprocessor.py  train.py
tests/: test_dvc.py
