[tool.poetry]
name = "data-processor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"
opentelemetry-distro = "^0.51b0"
opentelemetry-exporter-otlp = "^1.30.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
mlflow = "^2.20.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
sqlalchemy = "^2.0.38"
psycopg2-binary = "^2.9.10"
fastparquet = "^2024.11.0"
optuna = "^4.2.1"
boto3 = "^1.37.7"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.1.0"
coverage-badge = "^1.1.2"
pyright = "^1.1.394"
ruff = "^0.9.7"


[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
